
History
-------

Latest snapshot:
	* A function of canonical lanuage name has been fixed. The languages with names below "ru" in lexical order were affected.
	* The maximim length of log records has been enlarged to 480 bytes, the MUST size for a syslog message.
	* MaxHrefsPerServer command has been added. Uset it to limit the maximum number of hrefs accepted per server during one indexer run.
	* Limit command has been extended to accept SQL-based limits.
	
25 Apr 2009: 4.52
	* Busy timemout has been increased for SQLite.
	* Fixes for sub-document recoding and content-length calculation for a document with sub-documents.
	* A fix for incomplete passing text items from a subdocument to parant document.
	* The command parser has been fixed for case when a section in allin<section>: operator contains character '_' or '-'.
	* SkipHrefIn command has been added. Use it to skip some HTML tags from new href lookup.
	* SEASections command has been added. Use it to specify the list of sections which are used to construct SEA summary.
	* A possible trap on an empty document has been fixed.
	* A Disallow command in robots.txt doesn't lead to document removal from database anymore.
	* An error has been fixed in uncompression of big files.
	* Quffix command has been added.
	* Searchd cleans-up now the search cache on config loading/reloading.
	* A bug in stored check-up has been fixed.
	* Time zone processing has been added for Last-Modified header and meta.
	* MakePrefixes command has been added. Use it to produce all prefixes for words in a document. This is suitable for making suggestions.
	
31 Dec 2008: 4.51
	* Exact as in query string matching has been added for relevance calculation.
	* CAS based synchronization has been implemented for i386/x86_64 platform.
	* The ActionSQL command has been added. Use it to execute SQL-queries with document related data while indexing.
	* The support for KOI8-C (an extension of KOI8-R with old-Russian letters) charset has been added.