@@ -133,3 +133,26 @@ CREATE INDEX crossdict_url_id ON crossdict (url_id);
 CREATE INDEX crossdict_ref_id ON crossdict (ref_id);
 CREATE INDEX crossdict_word ON crossdict (word);
 CREATE INDEX crossdict_word_url_id ON crossdict (word, url_id);
+
+
+CREATE TABLE "storedchk" (
+       rec_id integer, 
+       url_id integer
+);
+CREATE INDEX storedchk_i ON storedchk (url_id);
+
+CREATE TABLE cachedchk (
+       rec_id integer
+);
+CREATE UNIQUE INDEX cachedchk_i ON cachedchk (rec_id);
+
+CREATE TABLE cachedchk2 (
+       url_id integer
+);
+CREATE UNIQUE INDEX cachedchk2_i ON cachedchk2 (url_id);
+
+CREATE TABLE cachedchk2 (
+       url_id integer
+);
+CREATE UNIQUE INDEX cachedchk2_i ON cachedchk (url_id);
+
