@@ -12,5 +12,6 @@ DROP TABLE srvinfo;
 DROP TABLE links;
 DROP TABLE storedchk;
 DROP TABLE cachedchk;
+DROP TABLE cachedchk2;
 DROP TABLE robots;
 DROP TABLE cookies;
