@@ -17,6 +17,8 @@ DROP TABLE storedchk
 /
 DROP TABLE cachedchk
 /
+DROP TABLE cachedchk2
+/
 DROP TABLE robots
 /
 DROP TABLE cookies
