@@ -174,3 +174,13 @@ CREATE TABLE "cachedchk" (
 );
 CREATE UNIQUE INDEX cachedchk_i ON cachedchk (rec_id);
 
+CREATE TABLE "cachedchk2" (
+       url_id integer
+);
+CREATE UNIQUE INDEX cachedchk2_i ON cachedchk2 (url_id);
+
+CREATE TABLE "cachedchk2" (
+       url_id integer
+);
+CREATE UNIQUE INDEX cachedchk2_i ON cachedchk (url_id);
+
